--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@next-auth/mongodb-adapter": "^1.0.3",
+    "antd": "^4.21.7",
+    "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.8.0",
+    "mongoose": "^6.4.6",
     "next": "12.2.2",
+    "next-auth": "^4.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
